Fix styling of autoacks alert on small screen sizes (#768)

--- a/src/PresentationalComponents/ExecutiveReport/_Download.scss
+++ b/src/PresentationalComponents/ExecutiveReport/_Download.scss
@@ -5,4 +5,8 @@
 
 .downloadButtonOverride {
     float: right;
+    @media only screen and (max-width: 585px) {
+        float: none;
+        padding-left: 0px;
+    }
 }
